syntax = "proto3";

package file;

option go_package = "src/proto";

service FileService {
  rpc GetSignedUrl(GetSignedUrlRequest) returns (GetSignedUrlResponse) {}
}

// Get Signed Url

message GetSignedUrlRequest{
  string userId = 1;
}

message GetSignedUrlResponse{
  string url = 1;
}
